--- a/App/templates/html/index.html
+++ b/App/templates/html/index.html
@@ -37,6 +37,9 @@
   </header>
 
   <main>
+    {% for message in messages %}
+      <h3 class="h33">{{message}}</h3>
+      {% endfor %}
     <section class="top">
       <div class="info-div">
         <h4 class="hey">Hey, I am Stephen Olajire</h4>
