added anchor tag to url

--- a/App/templates/html/index.html
+++ b/App/templates/html/index.html
@@ -109,11 +109,11 @@
               </div>
               <div class="join">
                 <h3 class="link1">Source Code link:</h3>
-                <p class="link11">{{portfolio_item.project_source_link }}</p>
+                <a href="{{portfolio_item.project_source_link }}"><p class="link11">{{portfolio_item.project_source_link }}</p></a>
               </div>
               <div class="join">
                 <h3 class="link2">Live Code link:</h3>
-                <p class="link22">{{ portfolio_item.project_link_code }}</p>
+                <a href="{{ portfolio_item.project_link_code }}"><p class="link22">{{ portfolio_item.project_link_code }}</p></a>
               </div>
               <div class="join">
                 <h3 class="type">Project type: {{ portfolio_item.project_type }}</h3>
